# sidsynth-mist

./: .gitignore  README.md
fpga/: build.sh  pll.qip  pll.v  pll_pix.v  sidsynth_mist.qip  sidsynth_mist.qpf  sidsynth_mist.qsf  sidsynth_mist.sdc
hex/: test_tune.hex
rtl/: ch_msg_router.v  dc_blocker.sv  midi_parser.v  plasma.sv  plasma_cdc.sv  plasma_channel.v  plasma_ema.v  plasma_pixel.v  plasma_sine.v  sdm.sv  sid_driver.v  sid_filter.sv  sid_tables.sv  sid_top.sv  sidraw_fifo.v  sidraw_player.v  sidraw_rom.v  sidraw_sd_reader.v  sidsynth_top.sv  uart_simple.v  vga_ctrl.v  video_dither.v  video_gen.v  voice_ctrl.v
sw/: sidraw_to_hex.py
sw/sidraw-dump/: CMakeLists.txt  README.md  libsidplayfp-current-cycle.patch
sw/sidraw-dump/src/: sid_play.cpp  sidraw_dump.cpp  sidraw_play.cpp
